fix: correction on the movie ranking project that whas out of alignment

--- a/FrontEnd/HTML/Multi-Pages Websites/4.3 HTML Porfolio Project/stylesheet.css
+++ b/FrontEnd/HTML/Multi-Pages Websites/4.3 HTML Porfolio Project/stylesheet.css
@@ -28,3 +28,7 @@ ul {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 14px;
 }
+
+h3 {
+  clear: left;
+}
